--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -6,7 +6,7 @@
             <img src="/assets/img/kreis.png" alt="">
             <img class="line" src="/assets/img/LINE .png" alt="">
             <div class="profil_img">
-                <img src="/assets/img/profil2.png" alt="">
+                <img src="/assets/img/20180828_171252.jpg" alt="">
             </div>
         </div>
         <div class="about_me_sub">
