--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="logo">
-        S<div class="i"></div>lvi<p>o</p>
+        <span>S</span> <div class="i"></div>lvi<p>o</p>
     </div>
     <div class="link">
         <a routerLink="">Home</a>
