--- a/src/app/contact/contact.component.sass
+++ b/src/app/contact/contact.component.sass
@@ -132,6 +132,7 @@
     cursor: pointer
     margin-top: 100px
     margin-left: 580px
+    transition: 150ms
     &:hover
         filter: invert(59%) sepia(94%) saturate(415%) hue-rotate(50deg) brightness(108%) contrast(92%)
 
