--- a/src/app/portfolio/portfolio.component.sass
+++ b/src/app/portfolio/portfolio.component.sass
@@ -92,12 +92,26 @@
     border-radius: 10px
     border: 1px solid #70E61C
     transition: 300ms
+    cursor: pointer
     &:hover
-        cursor: pointer
+        
         background-color: #70E61C
+
+.backend
+    flex-direction: column
+    cursor: unset
+    span
+        transition: 150ms	
+        font-size: 18px
+        cursor: pointer
+        &:hover
+            color: #9747FF
+            
+    
 
 .project_detail
     width: 530px
+    
 
 .shadow
     position: absolute
